--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,6 @@ exclude: [CNAME, README.md, .gitignore]
 permalink: / ## disables post output
 timezone: null
 lsi: false
-# markdown: kramdown
-# highlighter: rouge
 
 
 ### content configuration ###
@@ -12,9 +10,7 @@ title:       "Radical Framework"
 keywords:    "Radical, MVVM, WPF, Universal Apps"
 description: "Radical is an infrastructure framework whose primary role is to help in the development of composite WPF and Universal applications based on the Model-View-ViewModel pattern."
 source_link: "https://github.com/RadicalFx/RadicalFx.github.io"
-favicon:     #put a path like: "img/favicon.ico"
-touch_icon:  #put a path like: "img/apple-touch-icon.png"
-google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
-
+favicon:     "img/favicon.ico"
+touch_icon:  "img/apple-touch-icon.png"
 
 theme: jekyll-theme-minimal
