--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title:       "Radical Framework"
 keywords:    "Radical, MVVM, WPF, Universal Apps"
 description: "Radical is an infrastructure framework whose primary role is to help in the development of composite WPF and Universal applications based on the Model-View-ViewModel pattern."
 source_link: "https://github.com/RadicalFx/RadicalFx.github.io"
-favicon:     "img/favicon.ico"
-touch_icon:  "img/apple-touch-icon.png"
 
 theme: jekyll-theme-minimal
+
+google_analytics: UA-92229383-1
